# monclub_access_python

./: .gitignore  .output.txt  AGENTS.md  AUDIT_REPORT.md  MONCLUB_DESKTOP_BOUNDED_CONTEXTS.md  MONCLUB_DESKTOP_MIGRATION_ROADMAP.md  MONCLUB_DESKTOP_SEPARATION_PLAN.md  MONCLUB_TV_ACCESS_REBUILD_PROGRESS.md  MonClubAccess.spec  MonClubTV.spec  README.md  TAURI_API_CONTRACT.md  _build_result.txt  _test_integration.py  _test_result.txt  _totp_skew_sim.py  a4_output.txt  build_installer.ps1  build_release.ps1  build_tauri_shell.ps1  build_updater.ps1  check_layers.py  diag_dll.py  error_trace.txt  generate project.py  generate_installer.ps1  gym_access_secrets_cache.json  make_inno_bitmaps.py  package-lock.json  project_description.md  publish_github_release.ps1  remove_bg.py  requirements.txt  run_app.bat  run_tv_app.bat  test_a5.db  test_a9.db  totp_file_test.py  totp_replay_state.json  update.json  (+1 more)
.claude/: settings.local.json
access/: __init__.py  api.py  biometrics.py  bootstrap.py  config.py  local_api_routes.py  main.py  runtime.py  settings.py  storage.py  store.py  update_runtime.py
app/: __init__.py  main.py
data/: app.db  config.json
docs/: TV_DEPLOYMENT_RUNBOOK.md  implementation_near_realtime_sync.md
installer/: MonClubAccess.iss  MonClubTV.iss
mock_assets/: MonClubAccess-20260210-215935Z.manifest.json  MonClubAccess-20260210-220843Z.manifest.json
packaging/: desktop_components.ps1  (+1 more)
shared/: __init__.py  (+15 more)
tauri-ui/src-tauri/: Cargo.toml  tauri.conf.json
tauri-ui/src-tauri/capabilities/: default.json
tauri-ui/src-tauri/src/: lib.rs  main.rs
(+444 files in other folders)
